fix: Add circle shadow class

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
  -->
                     </div>
-                    <button class="btn circle left-circle">
+                    <button class="btn circle left-circle circle-shadow">
                     </button>
                 </div>
 
@@ -467,7 +467,7 @@
  -->
 <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
  -->                    </div>
-                    <button class="btn circle main-circle">
+                    <button class="btn circle main-circle circle-shadow">
                     </button>
                 </div>
                 <div class="right card-part-height card-shadow">
@@ -485,7 +485,7 @@
                              -->
 <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
  -->                    </div>
-                    <button class="btn circle right-circle">
+                    <button class="btn circle right-circle circle-shadow">
                     </button>
                 </div>
 
