Comment out articles section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#home">
                 <img id="logo" src="img/logo.svg" alt="">
-                <div id="title">MABR<span>AI</span>NS</div>
+                <div id="title">MABR
+                    <span>AI</span>NS</div>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
@@ -54,10 +55,10 @@
                     <li class="nav-item">
                         <a href="#contactus" class="nav-link">Jobs</a>
                     </li>
-                    <li class="nav-item">
+                    <!--   <li class="nav-item">
                         <a href="#articles" class="nav-link">Articles</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </nav>
@@ -366,13 +367,10 @@
 
             <div class="about-wrapper about">
                 <div class="vision">
-                    <img class="card-img-top" alt="" 
-                    src="img/vision.jpeg"
-                    srcset="img/vision386x200.jpeg 386w, 
+                    <img class="card-img-top" alt="" src="img/vision.jpeg" srcset="img/vision386x200.jpeg 386w, 
                             img/vision340x200.jpeg 340w, 
                             img/vision275x200.jpeg 275w, 
-                            img/vision300x200.jpeg 300w"
-                    sizes="(max-width: 1100px) 386px, 
+                            img/vision300x200.jpeg 300w" sizes="(max-width: 1100px) 386px, 
                            (max-width: 992px) 340px, 
                            (max-width: 768px) 275px, 
                            (max-width: 375px) 300px, 
@@ -384,13 +382,10 @@
                     </div>
                 </div>
                 <div class="mission">
-                    <img class="card-img-top" alt="" 
-                    src="img/mission.jpeg"
-                    srcset="img/mission386x200.jpeg 386w, 
+                    <img class="card-img-top" alt="" src="img/mission.jpeg" srcset="img/mission386x200.jpeg 386w, 
                             img/mission340x200.jpeg 340w, 
                             img/mission275x200.jpeg 275w, 
-                            img/mission300x200.jpeg 300w"
-                    sizes="(max-width: 1100px) 386px, 
+                            img/mission300x200.jpeg 300w" sizes="(max-width: 1100px) 386px, 
                            (max-width: 992px) 340px, 
                            (max-width: 768px) 275px, 
                            (max-width: 375px) 300px, 
@@ -436,7 +431,7 @@
                         <br>
                         <!--                         <p class="card-text">The perfect tool to automatically moderate content.</p>
                         <p class="card-text">Detect and filter any inappropriate content in photos, videos and live streams.</p> -->
-<!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
+                        <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
  -->
                     </div>
                     <button class="btn circle left-circle circle-shadow">
@@ -445,9 +440,8 @@
 
 
                 <div class="main card-part-height">
-                    <img class="card-img-top" alt="" 
-                    src="img/sentiment-analysis.jpeg">
-                 <!--    srcset="img/sentiment-analysis265x200.jpeg 265w, 
+                    <img class="card-img-top" alt="" src="img/sentiment-analysis.jpeg">
+                    <!--    srcset="img/sentiment-analysis265x200.jpeg 265w, 
                             img/sentiment-analysis235x200.jpeg 235w, 
                             img/sentiment-analysis380x200.jpeg 380w" 
                     sizes="(max-width: 1100px) 265px, 
@@ -465,8 +459,9 @@
                         <br>
                         <!--                         <p>Easily measure the sentiment around your business to fine-tune your messaging and win loyal customers.</p>
  -->
-<!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
- -->                    </div>
+                        <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
+ -->
+                    </div>
                     <button class="btn circle main-circle circle-shadow">
                     </button>
                 </div>
@@ -483,8 +478,9 @@
                         <!--                         <p>Automatically Replace Faces in images by using Image Processing techniques on each individual pixel
                             on the provided picture.</p>
                              -->
-<!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
- -->                    </div>
+                        <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
+ -->
+                    </div>
                     <button class="btn circle right-circle circle-shadow">
                     </button>
                 </div>
@@ -618,7 +614,7 @@
         <hr class="my-4">
     </div>
     <!--Articles section-->
-    <div id="articles" class="container-fluid  padding">
+    <!--     <div id="articles" class="container-fluid  padding">
         <h2>Articles</h2>
         <div class="articles-wrapper">
             <div class="third">
@@ -630,8 +626,7 @@
                         people.
                     </p>
                     <br>
-<!--                     <a href="#/" class="btn btn-outline-secondary">Read More</a>
- -->                </div>
+                </div>
 
             </div>
             <div class="main">
@@ -642,8 +637,7 @@
                     <p>More-realistic whiskered robots are better able to navigate dark or dusty environments, while providing
                         insights into rodent sensory processing.</p>
                     <br>
-<!--                     <a href="#/" class="btn btn-outline-secondary">Read More</a>
- -->                </div>
+               </div>
             </div>
             <div class="right">
                 <img src="img/biopsy.jpg" class="image-3" alt="">
@@ -653,11 +647,10 @@
                     <p>Machine-learning algorithms tuned to detecting cancer DNA in the blood could pave the way for personalized
                         cancer care.</p>
                     <br>
-<!--                     <a href="#/" class="btn btn-outline-secondary">Read More</a>
- -->                </div>
+              </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--footer section-->
     <footer>
@@ -685,18 +678,18 @@
                         </a>
 
                     </div>
-                    <h5>Working Hours</h5>
+                    <!-- <h5>Working Hours</h5>
                     <p class="d-inline hours">Sunday - Thursday: 9am - 5pm.</p>
 
                     <p class="d-inline hours">Friday, Saturday: closed.</p>
-                </div>
+                </div> -->
 
-                <div class="col-12">
-                    <hr class="light-100">
-                    <h5>&copy; 2018 Mabrains Limited Liability Company</h5>
+                    <div class="col-12">
+                        <hr class="light-100">
+                        <h5>&copy; 2018 Mabrains Limited Liability Company</h5>
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
 
     <script src="js/formValidation.js"></script>
