fix: Link to minified css and js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
     <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
     <title>Mabrains</title>
 </head>
@@ -695,7 +695,7 @@
     <script src="js/formValidation.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/emailjs.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
 
 </body>
 
