--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                                 <div class="form-row">
                                     <div class="form-group col-sm-6">
                                         <label for="emailHire">Email</label>
-                                        <input type="text" class="form-control" style="font-family:'sans serif'" id="emailHire" placeholder="name@example.com" name="email"
+                                        <input type="email" class="form-control" style="font-family:'sans serif'" id="emailHire" placeholder="name@example.com" name="email"
                                             required>
                                         <div class="valid-feedback"></div>
                                         <div class="invalid-feedback">Please provide an email address.</div>
@@ -576,7 +576,7 @@
                                 <div class="form-row">
                                     <div class="form-group col-sm-6">
                                         <label for="emailApply">Email</label>
-                                        <input type="text" class="form-control" id="emailApply" placeholder="name@example.com" name="email" required>
+                                        <input type="email" class="form-control" id="emailApply" placeholder="name@example.com" name="email" required>
                                         <div class="valid-feedback"></div>
                                         <div class="invalid-feedback">Please provide an email address.</div>
                                     </div>
