--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 </head>
 
 <body>
-    <div>
-
-    </div>
     <button id="scrollTotopBtn" title="Go to top">
     </button>
     <!--Navbar section-->
@@ -29,8 +26,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#home">
                 <img id="logo" src="img/logo.svg" alt="">
-                <div id="title">MABR
-                    <span>AI</span>NS</div>
+                <div id="title">MABR<span>AI</span>NS</div>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
@@ -415,29 +411,32 @@
         <div class="row padding">
 
             <div class="apis-wrapper">
-                <div class="left card-part-height card-shadow">
-                    <img src="img/scissors.jpg" class="card-img-top" alt="">
-                    <div class="card-inner">
-                        <h4 class="card-title">NSFW CLASSIFIER</h4>
-                        <p class="card-text">Using Deep Learning techniques to check for nudity and pornographic content both in pictures and
-                            videos
-                        </p>
-                        <p class="card-text hidden">You could use our API for checking images on image platforms and for auto cropping videos for Adult
-                            content.
-                        </p>
-                        <p class="card-text hidden">Our classifier achieves more than 0.995 accuracy with 0.985 F1 score on 1.5 Million images balanced
-                            dataset.
-                        </p>
-                        <br>
-                        <!--                         <p class="card-text">The perfect tool to automatically moderate content.</p>
-                        <p class="card-text">Detect and filter any inappropriate content in photos, videos and live streams.</p> -->
-                        <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
- -->
-                    </div>
-                    <button class="btn circle left-circle circle-shadow">
-                    </button>
-                </div>
-
+                <a href="nsfw.html">
+                        <div class="left card-part-height card-shadow">
+                                <img src="img/scissors.jpg" class="card-img-top" alt="">
+                                <div class="card-inner">
+                                    <h4 class="card-title">NSFW CLASSIFIER</h4>
+                                    <p class="card-text">Using Deep Learning techniques to check for nudity and pornographic content both in pictures and
+                                        videos
+                                    </p>
+                                    <p class="card-text hidden">You could use our API for checking images on image platforms and for auto cropping videos for Adult
+                                        content.
+                                    </p>
+                                    <p class="card-text hidden">Our classifier achieves more than 0.995 accuracy with 0.985 F1 score on 1.5 Million images balanced
+                                        dataset.
+                                    </p>
+                                    <br>
+                                    <!--                         <p class="card-text">The perfect tool to automatically moderate content.</p>
+                                    <p class="card-text">Detect and filter any inappropriate content in photos, videos and live streams.</p> -->
+                                    <!--                         <a href="#/" class="btn btn-outline-secondary hidden">Read More</a>
+             -->
+                                </div>
+                                <button class="btn circle left-circle circle-shadow">
+                                </button>
+                            </div>
+            
+                </a>
+                
 
                 <div class="main card-part-height">
                     <img class="card-img-top" alt="" src="img/sentiment-analysis.jpeg">
