--- a/nsfw.html
+++ b/nsfw.html
@@ -24,8 +24,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#home">
                 <img id="logo" src="img/logo.svg" alt="">
-                <div id="title">MABR
-                    <span>AI</span>NS</div>
+                <div id="title">MABR<span>AI</span>NS</div>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
