fix: Add href links to sections

--- a/nsfw.html
+++ b/nsfw.html
@@ -35,22 +35,22 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#services" class="nav-link">Services</a>
+                        <a href="index.html#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#aboutus" class="nav-link">About us</a>
+                        <a href="index.html#aboutus" class="nav-link">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#apis" class="nav-link">APIs</a>
+                        <a href="index.html#apis" class="nav-link">APIs</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contactus" class="nav-link">Contact us</a>
+                        <a href="index.html#contactus" class="nav-link">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contactus" class="nav-link">Jobs</a>
+                        <a href="index.html#contactus" class="nav-link">Jobs</a>
                     </li>
                     <!--   <li class="nav-item">
-                            <a href="#articles" class="nav-link">Articles</a>
+                            <a href="index.html#articles" class="nav-link">Articles</a>
                         </li>
                     </ul> -->
             </div>
