uncomment articles section

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         <hr class="my-4">
     </div>
     <!--Articles section-->
-    <!--     <div id="articles" class="container-fluid  padding">
+     <div id="articles" class="container-fluid  padding">
         <h2>Articles</h2>
         <div class="articles-wrapper">
             <div class="third">
@@ -651,7 +651,7 @@
               </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <!--footer section-->
     <footer>
